--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "@coinbase/cdp-sdk": "^1.24.0",
     "@react-router/node": "^7.5.3",
     "@react-router/serve": "^7.5.3",
+    "axios": "^1.10.0",
+    "dotenv": "^17.2.0",
+    "ethers": "^5.8.0",
     "isbot": "^5.1.27",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router": "^7.5.3"
+    "react-router": "^7.5.3",
+    "viem": "^2.31.7",
+    "x402-axios": "^0.4.1"
   },
   "devDependencies": {
     "@react-router/dev": "^7.5.3",
