--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@coinbase/cdp-sdk": "^1.24.0",
     "@react-router/node": "^7.5.3",
     "@react-router/serve": "^7.5.3",
+    "@scure/base": "^1.1.5",
+    "@solana/web3.js": "^1.95.0",
     "axios": "^1.10.0",
     "dotenv": "^17.2.0",
     "ethers": "^5.8.0",
@@ -20,7 +22,8 @@
     "react-dom": "^19.1.0",
     "react-router": "^7.5.3",
     "viem": "^2.31.7",
-    "x402-axios": "^0.4.1"
+    "x402-axios": "^0.4.1",
+    "x402-solana": "^0.1.3"
   },
   "devDependencies": {
     "@react-router/dev": "^7.5.3",
